--- a/donate.html
+++ b/donate.html
@@ -492,10 +492,19 @@
 				    <div class="clear"></div>
 					</div>
 					{% if templateset.custom_fields.pre_submit_text %}
-						<div class="pre-submit-text">
-							{{ templateset.custom_fields.pre_submit_text }}
-						</div>
-					{% endif %}  
+					<div class="pre-submit-text">
+<div class="text-small">In submitting this donation I certify that:<br>
+	<ul>
+		<li>I am a U.S. citizen or lawfully admitted permanent resident (i.e., green card holder).</li>
+		<li>This contribution is made from my own funds, and funds are not being provided to me by another person or entity for the purpose of making this contribution.</li>
+		<li>I am making this contribution with my own personal credit card and not with a corporate or business credit card or a card issued to another person.</li>
+		<li>I am at least eighteen years old.</li>
+		<li>I am not a federal contractor.</li>
+	</ul>
+</div>						
+<!-- eventually replace with this						{{ templateset.custom_fields.pre_submit_text }}-->
+					</div>
+				{% endif %}  
 
         </div><!--ak-styled-fields-->
 
