tweaking style on pre-submit text

--- a/donate.html
+++ b/donate.html
@@ -493,8 +493,8 @@
 					</div>
 					{% if templateset.custom_fields.pre_submit_text %}
 					<div class="pre-submit-text">
-<div class="text-small">In submitting this donation I certify that:<br>
-	<ul>
+<div class="text-small2">In submitting this donation I certify that:<br>
+	<ul style="padding-left:2em;">
 		<li>I am a U.S. citizen or lawfully admitted permanent resident (i.e., green card holder).</li>
 		<li>This contribution is made from my own funds, and funds are not being provided to me by another person or entity for the purpose of making this contribution.</li>
 		<li>I am making this contribution with my own personal credit card and not with a corporate or business credit card or a card issued to another person.</li>
