adding templateset scustom field for showing occupation and employer fields (req for c4 donations)

--- a/donate.html
+++ b/donate.html
@@ -368,7 +368,7 @@
           </div>
 					{% include "./privacy.html" %}
 
-{% if has_candidates %}
+{% if templateset.custom_fields.ask_occupation_and_employer %}
           <p class="ak-label-above" id="ak-occ-emp-why">
               For political donations, we're required to ask for your employer and occupation:
           </p>
