--- a/donate.html
+++ b/donate.html
@@ -369,8 +369,8 @@
 					{% include "./privacy.html" %}
 
 {% if templateset.custom_fields.ask_occupation_and_employer %}
-          <p class="ak-label-above" id="ak-occ-emp-why">
-              For political donations, we're required to ask for your employer and occupation:
+          <p class="ak-label-above text-small" id="ak-occ-emp-why">         
+              For political donations, federal law requires us to ask for your employer and occupation:
           </p>
 					<div class="ak-errs-below">
             <div class="input-text ak-input-type-action">
