--- a/thanks.html
+++ b/thanks.html
@@ -15,6 +15,8 @@
 			<input type="hidden" name="utf8" value="&#x2714;" />
 			<input type="hidden" name="page" value="{{ page.name }}" />
 				<ul id="ak-errors" class="c10 ct10 cm10" style="display:none;"><li></li></ul>
+{%ifequal page.custom_fields.hide_share_buttons_on_thanks_page "Y" %}
+{% else %}
 				<div class="margin-bottom-medium c6 ct10 cm10">
 					<div class="share-facebook">
 						<div class="box bg-facebook-color margin-bottom-none">
@@ -71,7 +73,8 @@
 							</div>
 						</div>
 					</div>
-
+					
+{% endifequal %}		
 
 <div class="taf-option taf-option-3" id="taf-email" style="display:none">
 <h4>Share via Email</h4>
