--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -10,6 +10,7 @@ Custom template for same-page post-AJAX submit share ask.
 
 <script>
 jQuery(document).ready(function($){
+	/* only run the AJAX submission if we're sure this is an AK-hosted page */
 	if ( $('html').hasClass('ak-hosted') ){
 		/* handle form submissison */
 		$('#action-form').submit(function (e) {
