--- a/wrapper.html
+++ b/wrapper.html
@@ -108,6 +108,10 @@
 <!-- End Facebook Pixel Code -->
 {% endif %}
 
+{% if page.custom_fields.page_custom_header_code %}
+	{{ page.custom_fields.page_custom_header_code }}
+{% endif %}
+
 </head>
 
 <body class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.iso_code|default:'en-US'}} page-layout-{% if page.custom_fields.page_layout_style %}{{ page.custom_fields.page_layout_style }}{% else %}condensed{% endif %} {% if page.lang.is_rtl %}ak-rtl{% endif %} no-js ak-no-js ">
