--- a/country_select.html
+++ b/country_select.html
@@ -1,6 +1,12 @@
 {% load actionkit_tags %}
 <select name="{{ input_name_prefix }}country" id="{{ input_name_prefix }}country" {% if onchange %}onchange="{{ onchange }}" onblur="{{ onchange }}"{% endif %} {% if page.custom_fields.form_preselect_country %}data-preselect="{{ page.custom_fields.form_preselect_country }}"{% endif %}>
 <option selected></option>
+{% for std_name,name in page.lang_or_en.country_names %}
+	{% if std_name == "Puerto Rico" %}{% else %}
+<option value="{{ std_name|escapeall }}">{{ name|escapeall }}</option>
+	{% endif %}
+{% endfor %}
+<!-- in case we need manual override
 	<option value="Åland Islands">
 		Åland Islands
 	</option>
@@ -751,11 +757,5 @@
 	<option value="Zimbabwe">
 		Zimbabwe
 	</option>
-<!-- commenting out for now to fix country names
-{% for std_name,name in page.lang_or_en.country_names %}
-	{% if std_name == "Puerto Rico" %}{% else %}
-<option value="{{ std_name|escapeall }}">{{ name|escapeall }}</option>
-	{% endif %}
-{% endfor %}
 -->
 </select>
