adjust conditional so FB is still the default share for older pages

--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -97,7 +97,7 @@ Custom template for same-page post-AJAX submit share ask.
 		</div>
 	</div>
 	{% endif %}
-	{% if page.custom_fields.share_facebook == "yes" %}
+	{% if page.custom_fields.share_facebook != "no" %}
 	<div class="afteraction-facebook-share afteraction-share-option margin-bottom-large">
 		<div class="afteraction-facebook-share-intro afteraction-share-option-intro margin-bottom-medium">
 			<a class="afteraction-share-button fb-share button-icon bg-facebook-color bg-facebook-icon button-share-facebook"  href="/share/link?type=fb&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}">{% filter ak_text:"general_share_on_fb" %}Share on Facebook{% endfilter %}</a>
