--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -85,13 +85,13 @@ Custom template for same-page post-AJAX submit share ask.
 	{% if page.custom_fields.share_whatsapp == "yes" %}
 	<div class="afteraction-share-whatsapp afteraction-share-option margin-bottom-large">
 		<div class="afteraction-share-option-intro margin-bottom-medium">
-			<a class="afteraction-share-button whatsapp-share button-icon bg-whatsapp-color bg-whatsapp-icon" href="https://wa.me/?text={{ page.followup.share_description_value|urlencode }}">{% filter ak_text:"general_share_on_whatsapp" %}Share on WhatsApp{% endfilter %}</a>
+			<a class="afteraction-share-button whatsapp-share button-icon bg-whatsapp-color bg-whatsapp-icon" href="https://wa.me/?text={% if page.custom_fields.share_whatsapp_message %}{{ page.custom_fields.share_whatsapp_message }}{% else %}{{ page.followup.share_description_value|urlencode }}{% endif %}">{% filter ak_text:"general_share_on_whatsapp" %}Share on WhatsApp{% endfilter %}</a>
 		</div>
 		<div class="afteraction-share-whatsapp-preview afteraction-share-option-preview ">
 			<div class="whatsapp-preview-chat-bg padding-small">
 				<p class="text-caps text-center text-strong text-small opacity-50">{% filter ak_text:"general_preview" %}Preview:{% endfilter %}</p>
 				<div class="whatsapp-preview-chat-bubble">
-					{{ page.followup.share_description_value }}
+					{% if page.custom_fields.share_whatsapp_message %}{{ page.custom_fields.share_whatsapp_message }}{% else %}{{ page.followup.share_description_value|urlencode }}{% endif %}
 				</div>
 			</div>
 		</div>
@@ -99,7 +99,7 @@ Custom template for same-page post-AJAX submit share ask.
 	{% endif %}
 	{% if page.custom_fields.share_facebook != "no" %}
 	<div class="afteraction-facebook-share afteraction-share-option margin-bottom-large">
-		<div class="afteraction-facebook-share-intro afteraction-share-option-intro margin-bottom-medium"> 
+		<div class="afteraction-facebook-share-intro afteraction-share-option-intro margin-bottom-medium">
 			<a class="afteraction-share-button fb-share button-icon bg-facebook-color bg-facebook-icon button-share-facebook"  href="/share/link?type=fb&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}">{% filter ak_text:"general_share_on_fb" %}Share on Facebook{% endfilter %}</a>
 		</div>
 		<div class="fb-preview bg-white border margin-bottom-large">
