fix the nesting of the closing </p> tag

--- a/event_create.html
+++ b/event_create.html
@@ -202,8 +202,9 @@
 				{% if page.custom_fields.event_create_description_helptext %}
 					{{ page.custom_fields.event_create_description_helptext }}
 				{% else %}
-					{% filter ak_text:"event_create_field_label_description_help" %}Your event description will be displayed on the website, so try to write a compelling invitation that will make people want to join. You will be able to edit it later if your plans change. (5 word minimum){% endfilter %}</p>
+					{% filter ak_text:"event_create_field_label_description_help" %}Your event description will be displayed on the website, so try to write a compelling invitation that will make people want to join. You will be able to edit it later if your plans change. (5 word minimum){% endfilter %}
 				{% endif %}
+				</p>
       </fieldset>
     </div>
   </div>
