adding a note to myself

--- a/event_host_details.html
+++ b/event_host_details.html
@@ -36,6 +36,12 @@
 	{% endautoescape %}
 {% endif %}
 
+<!-- TODO 
+	* check if fields exist before displaying
+	* add translations for fields and labels
+	
+-->
+
 <div class="event-custom-fields margin-bottom-medium">
 	<strong class="text-small2 text-caps opacity-50">Group Name:</strong><br>
 	<div class="event-group-name">
