--- a/wrapper.html
+++ b/wrapper.html
@@ -66,8 +66,6 @@
 {% if templateset.custom_fields.site_addl_css_url %}
 	<link rel='stylesheet' id='addl-css' href='{{ templateset.custom_fields.site_addl_css_url }}' type='text/css' media='screen' />
 {% endif %}
-{% if templateset.custom_fields.site_header_scripts %}
-{% endif %}
 
 {% if page.lang.is_rtl %}
 	<link rel='stylesheet' id='baseline-rtl-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3-rtl.css' type='text/css' media='all' />
@@ -109,6 +107,10 @@
   src="https://www.facebook.com/tr?id=147925275930541&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
+{% endif %}
+
+{% if templateset.custom_fields.site_header_scripts %}
+	{{ templateset.custom_fields.site_header_scripts }}
 {% endif %}
 
 {% if page.custom_fields.page_custom_header_code %}
